@@ -14,6 +14,9 @@ import org.springframework.validation.Errors;
 import ca.gc.aafc.collection.api.CollectionModuleBaseIT;
 import ca.gc.aafc.collection.api.entities.Project;
 import ca.gc.aafc.collection.api.testsupport.factories.ProjectFactory;
+import ca.gc.aafc.dina.validation.ValidationErrorsHelper;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class ProjectValidatorTest extends CollectionModuleBaseIT {
   
@@ -34,21 +37,40 @@ public class ProjectValidatorTest extends CollectionModuleBaseIT {
 
   @Test 
   void validate_EndDateBeforeStartDate_ErrorsReturned() {
-    String expectedErrorMessage = getExpectedErrorMessage(ProjectValidator.VALID_EVENT_DATE_KEY);
+    String expectedErrorMessage = getExpectedErrorMessage(ProjectValidator.VALID_EVENT_DATE_KEY, null);
 
     Project project = ProjectFactory.newProject()
-      .startDate(LocalDate.of(2021, 01, 01))
-      .endDate(LocalDate.of(2001, 01, 01))
+      .startDate(LocalDate.of(2021, 1, 1))
+      .endDate(LocalDate.of(2001, 1, 1))
       .build();
 
     Errors errors = new BeanPropertyBindingResult(project, project.getUuid().toString());
     validator.validate(project, errors);
     Assertions.assertEquals(1, errors.getAllErrors().size());
-    Assertions.assertEquals(expectedErrorMessage, errors.getAllErrors().get(0).getDefaultMessage());
+    Assertions.assertEquals(expectedErrorMessage, errors.getAllErrors().getFirst().getDefaultMessage());
   }
 
-  private String getExpectedErrorMessage(String key) {
-    return messageSource.getMessage(key, null, LocaleContextHolder.getLocale());
+  @Test
+  void validate_ParentHasParent_HasErrors() {
+    String expectedErrorMessage = getExpectedErrorMessage(CollectionValidator.VALID_PARENT_HAS_NO_PARENT, "project");
+
+    Project project = ProjectFactory.newProject().build();
+    Project parentProject = ProjectFactory.newProject().build();
+    Project parentParentProject = ProjectFactory.newProject().build();
+    project.setParentProject(parentProject);
+    parentProject.setParentProject(parentParentProject);
+
+    Errors errors = ValidationErrorsHelper.newErrorsObject(project);
+
+    validator.validate(project, errors);
+    Assertions.assertTrue(errors.hasErrors());
+    assertEquals(1, errors.getAllErrors().size());
+    assertEquals(expectedErrorMessage, errors.getAllErrors().getFirst().getDefaultMessage());
+  }
+
+  private String getExpectedErrorMessage(String key, String args) {
+    return messageSource.getMessage(key, args == null ? null : new String[] {args},
+      LocaleContextHolder.getLocale());
   }
 
 }
